# Pan

./: Cargo.toml  README.md  array.pan  demo.pan  dict.pan  for.pan  hashmap.pan  multiassign.pan  note.md  public_static.pan  string.pan  struct.pan  test.pan  tuple.pan
bytecode/: Cargo.toml
bytecode/src/: bytecode.rs  lib.rs  value.rs
codegen/: Cargo.toml
codegen/src/: code_gen.rs  control_flow_block.rs  lib.rs  llvm.rs  module_value.rs  resovle_code_gen.rs  util.rs
compiler/: Cargo.toml
compiler/src/: compile.rs  const_value.rs  ctype.rs  error.rs  file_cache_symboltable.rs  format_string.rs  function.rs  function_call.rs  import.rs  lib.rs  output_stream.rs  packagebuild.rs  peephole.rs  resolve_builtinfun_import.rs  resolve_fns.rs  resolve_import_compile.rs  resolve_import_symbol.rs  resolve_symbol.rs  symboltable.rs  util.rs  variable_type.rs
compiler/src/builtin/: builtin_fun.rs  builtin_type.rs  mod.rs
compiler/src/peephole/: optimizations.rs
pan_ast/: Cargo.toml
pan_ast/src/: ast.rs  crate_disambiguator.rs  lib.rs  mut_visit.rs  node_id.rs  ptr.rs  token.rs  tokenstream.rs  visit.rs
pan_ast/src/attr/: mod.rs
pan_ast/src/expand/: allocator.rs
pan_ast/src/util/: comments.rs  literal.rs  parser.rs
pan_ast_lowering/: Cargo.toml
pan_ast_lowering/src/: expr.rs  item.rs  lib.rs  pat.rs  path.rs
pan_ast_passes/: Cargo.toml
pan_ast_passes/src/: ast_validation.rs  feature_gate.rs  node_count.rs  show_span.rs
pan_attr/: Cargo.toml
pan_attr/src/: builtin.rs  lib.rs
pan_builtin_macros/: Cargo.toml
pan_builtin_macros/src/: asm.rs  assert.rs  cfg.rs  cfg_accessible.rs  cmdline_attrs.rs  compile_error.rs  concat.rs  concat_idents.rs  env.rs  format.rs  format_foreign.rs  global_allocator.rs  global_asm.rs  lib.rs  llvm_asm.rs  log_syntax.rs  proc_macro_harness.rs  source_util.rs  standard_library_imports.rs  test.rs  test_harness.rs  trace_macros.rs  util.rs
pan_builtin_macros/src/deriving/: bounds.rs  clone.rs  debug.rs  decodable.rs  default.rs  encodable.rs  hash.rs  mod.rs
pan_codegen_llvm/: Cargo.toml
pan_codegen_llvm/src/: abi.rs  allocator.rs  asm.rs  attributes.rs  base.rs  builder.rs  callee.rs  common.rs  consts.rs  context.rs  declare.rs  intrinsic.rs  lib.rs  llvm_util.rs  metadata.rs  mono_item.rs  type_.rs  type_of.rs  va_arg.rs
pan_codegen_llvm/src/back/: archive.rs  lto.rs  profiling.rs  write.rs
pan_codegen_llvm/src/coverageinfo/: mapgen.rs  mod.rs
pan_codegen_llvm/src/debuginfo/: create_scope_map.rs  gdb.rs  metadata.rs  mod.rs  namespace.rs  utils.rs
pan_codegen_llvm/src/llvm/: archive_ro.rs  ffi.rs  mod.rs
pan_codegen_ssa/: Cargo.toml
pan_codegen_ssa/src/: base.rs  common.rs  glue.rs  lib.rs  meth.rs  mono_item.rs  target_features.rs
pan_codegen_ssa/src/back/: archive.rs  command.rs  link.rs  linker.rs  lto.rs  rpath.rs  symbol_export.rs  write.rs
pan_codegen_ssa/src/coverageinfo/: ffi.rs  map.rs
pan_codegen_ssa/src/debuginfo/: type_names.rs
pan_codegen_ssa/src/mir/: analyze.rs  block.rs  constant.rs  coverageinfo.rs  debuginfo.rs  intrinsic.rs  mod.rs  operand.rs  place.rs  rvalue.rs  statement.rs
pan_codegen_ssa/src/traits/: abi.rs  asm.rs  backend.rs  builder.rs  consts.rs  coverageinfo.rs  debuginfo.rs  declare.rs  intrinsic.rs  misc.rs  mod.rs  statics.rs  type_.rs  write.rs
pan_data_structures/: Cargo.toml
pan_data_structures/src/: fingerprint.rs  functor.rs  lib.rs  stable_hasher.rs  svh.rs  sync.rs  transitive_relation.rs  vec_linked_list.rs  work_queue.rs
pan_data_structures/src/graph/: mod.rs
pan_data_structures/src/obligation_forest/: graphviz.rs
pan_data_structures/src/sorted_map/: index_map.rs
pan_driver/: Cargo.toml
pan_driver/src/: lib.rs  pretty.rs
pan_errors/: Cargo.toml
pan_errors/src/: annotate_snippet_emitter_writer.rs  diagnostic.rs  diagnostic_builder.rs  emitter.rs  json.rs  lib.rs  registry.rs
pan_expand/: Cargo.toml
pan_expand/src/: base.rs  build.rs  config.rs  expand.rs  lib.rs  mbe.rs  module.rs  placeholders.rs  proc_macro.rs  proc_macro_server.rs  tests.rs
pan_expand/src/mbe/: macro_check.rs  macro_parser.rs  macro_rules.rs  quoted.rs  transcribe.rs
pan_expand/src/mut_visit/: tests.rs
pan_expand/src/parse/: tests.rs
pan_expand/src/tokenstream/: tests.rs
pan_hir/: Cargo.toml
pan_hir/src/: arena.rs  def.rs  definitions.rs  hir.rs  hir_id.rs  intravisit.rs  lang_items.rs  lib.rs  pat_util.rs  stable_hash_impls.rs  target.rs  weak_lang_items.rs
pan_hir_pretty/: Cargo.toml
pan_hir_pretty/src/: lib.rs
pan_incremental/: Cargo.toml
pan_incremental/src/: assert_dep_graph.rs  assert_module_sources.rs  lib.rs
pan_incremental/src/persist/: data.rs  dirty_clean.rs  file_format.rs  fs.rs  load.rs  save.rs  work_product.rs
pan_infer/: Cargo.toml
pan_infer/src/: lib.rs
pan_infer/src/infer/: at.rs  combine.rs  equate.rs  free_regions.rs  freshen.rs  fudge.rs  glb.rs  lattice.rs  lub.rs  mod.rs  resolve.rs  sub.rs  type_variable.rs  undo_log.rs
pan_interface/: Cargo.toml
pan_interface/src/: callbacks.rs  interface.rs  passes.rs  proc_macro_decls.rs  queries.rs  tests.rs  util.rs
pan_lint/: Cargo.toml
pan_lint/src/: array_into_iter.rs  builtin.rs  context.rs  early.rs  internal.rs  late.rs  levels.rs  lib.rs  methods.rs  non_ascii_idents.rs  nonstandard_style.rs  panic_fmt.rs  passes.rs  redundant_semicolon.rs  traits.rs  types.rs  unused.rs
pan_lint_defs/: Cargo.toml
pan_lint_defs/src/: builtin.rs  lib.rs
pan_metadata/: Cargo.toml
pan_metadata/src/: creader.rs  dependency_format.rs  foreign_modules.rs  lib.rs  link_args.rs  locator.rs  native_libs.rs
pan_middle/: Cargo.toml
pan_middle/src/: arena.rs  lib.rs  lint.rs
pan_mir/: Cargo.toml
pan_mir/src/: lib.rs  shim.rs
pan_mir_build/: Cargo.toml
pan_mir_build/src/: lib.rs  lints.rs
pan_parse/: Cargo.toml
pan_parse/src/: lib.rs  validate_attr.rs
pan_plugin_impl/: Cargo.toml
pan_plugin_impl/src/: build.rs  lib.rs  load.rs
pan_privacy/: Cargo.toml
pan_privacy/src/: lib.rs
pan_query_system/: Cargo.toml
pan_query_system/src/: cache.rs  lib.rs
(+668 files in other folders)
