[package]
name = "Pan"
version = "0.1.0"
authors = ["潘振兴 <panzhenxing551@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
clap = "2.33"
pan-compiler = {path = "compiler", version = "0.1.0"}
pan-parser = {path = "parser", version = "0.1.0"}
#vm = {path = "vm", version = "0.1.1"}
dirs = "2.0"
num-traits = "0.2.8"
