[package]
name = "pan"
version = "0.1.0"
authors = ["潘振兴 <panzhenxing551@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/pzxpan/inkwell", branch = "master", features = ["llvm9-0"] }
lazy_static = "1.4"
walkdir = "2"
log = "0.4"
env_logger = "0.7"
clap = "2.33"
pan-compiler = {path = "compiler", version = "0.1.0"}
pan-parser = {path = "parser", version = "0.1.0"}
pan-bytecode = {path = "bytecode", version = "0.1.0"}
pan-vm = {path = "vm", version="0.1.0"}
pan-codegen = {path = "codegen", version="0.1.0"}
#pan_driver = {path="pan_driver"}
dirs = "2.0"
num-traits = "0.2.8"
