[package]
name = "pan-codegen"
version = "0.1.0"
authors = ["pzxpan <278162115@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
llvm-sys = "110"
itertools = "0.9"
tempfile = "3.1"
getopts = "0.2.21"
matches = "0.1.8"
colored = "2"

[dev-dependencies]
quickcheck = "0.9.2"
pretty_assertions = "0.6.1"