[package]
authors = ["The Rust Project Developers"]
name = "pan_ast"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
pan_serialize = { path = "../pan_serialize" }
tracing = "0.1"
pan_span = { path = "../pan_span" }
pan_data_structures = { path = "../pan_data_structures" }
pan_index = { path = "../pan_index" }
pan_lexer = { path = "../pan_lexer" }
pan_macros = { path = "../pan_macros" }
smallvec = { version = "1.0", features = ["union", "may_dangle"] }
bitflags = "1.2.1"
