[package]
authors = ["The Rust Project Developers"]
name = "pan_ast_lowering"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
pan_arena = { path = "../pan_arena" }
tracing = "0.1"
pan_ast_pretty = { path = "../pan_ast_pretty" }
pan_hir = { path = "../pan_hir" }
pan_target = { path = "../pan_target" }
pan_data_structures = { path = "../pan_data_structures" }
pan_index = { path = "../pan_index" }
pan_span = { path = "../pan_span" }
pan_errors = { path = "../pan_errors" }
pan_session = { path = "../pan_session" }
pan_ast = { path = "../pan_ast" }
smallvec = { version = "1.0", features = ["union", "may_dangle"] }
