[package]
authors = ["The Rust Project Developers"]
name = "pan_ast_passes"
version = "0.0.0"
edition = "2018"

[dependencies]
itertools = "0.9"
tracing = "0.1"
pan_ast_pretty = { path = "../pan_ast_pretty" }
pan_attr = { path = "../pan_attr" }
pan_data_structures = { path = "../pan_data_structures" }
pan_errors = { path = "../pan_errors" }
pan_feature = { path = "../pan_feature" }
pan_parse = { path = "../pan_parse" }
pan_session = { path = "../pan_session" }
pan_span = { path = "../pan_span" }
pan_ast = { path = "../pan_ast" }
