[package]
authors = ["The Rust Project Developers"]
name = "pan_attr"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
pan_ast_pretty = { path = "../pan_ast_pretty" }
pan_serialize = { path = "../pan_serialize" }
pan_errors = { path = "../pan_errors" }
pan_span = { path = "../pan_span" }
pan_data_structures = { path = "../pan_data_structures" }
pan_feature = { path = "../pan_feature" }
pan_lexer = { path = "../pan_lexer" }
pan_macros = { path = "../pan_macros" }
pan_session = { path = "../pan_session" }
pan_ast = { path = "../pan_ast" }
version_check = "0.9"
