[package]
authors = ["The Rust Project Developers"]
name = "pan_builtin_macros"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
pan_parse_format = { path = "../pan_parse_format" }
tracing = "0.1"
pan_ast_pretty = { path = "../pan_ast_pretty" }
pan_attr = { path = "../pan_attr" }
pan_data_structures = { path = "../pan_data_structures" }
pan_errors = { path = "../pan_errors" }
pan_feature = { path = "../pan_feature" }
pan_parse = { path = "../pan_parse" }
pan_target = { path = "../pan_target" }
pan_session = { path = "../pan_session" }
smallvec = { version = "1.0", features = ["union", "may_dangle"] }
pan_ast = { path = "../pan_ast" }
pan_expand = { path = "../pan_expand" }
pan_span = { path = "../pan_span" }
