[package]
authors = ["The Rust Project Developers"]
name = "pan_codegen_llvm"
version = "0.0.0"
edition = "2018"

[lib]
test = false
doctest = false

[dependencies]
bitflags = "1.0"
libc = "0.2"
measureme = "9.0.0"
snap = "1"
tracing = "0.1"
pan_middle = { path = "../pan_middle" }
rustc-demangle = "0.1.18"
pan_attr = { path = "../pan_attr" }
pan_codegen_ssa = { path = "../pan_codegen_ssa" }
pan_data_structures = { path = "../pan_data_structures" }
pan_errors = { path = "../pan_errors" }
pan_feature = { path = "../pan_feature" }
pan_fs_util = { path = "../pan_fs_util" }
pan_hir = { path = "../pan_hir" }
pan_incremental = { path = "../pan_incremental" }
pan_index = { path = "../pan_index" }
pan_llvm = { path = "../pan_llvm" }
pan_session = { path = "../pan_session" }
pan_serialize = { path = "../pan_serialize" }
pan_target = { path = "../pan_target" }
smallvec = { version = "1.0", features = ["union", "may_dangle"] }
pan_ast = { path = "../pan_ast" }
pan_span = { path = "../pan_span" }
