[package]
authors = ["The Rust Project Developers"]
name = "pan_codegen_ssa"
version = "0.0.0"
edition = "2018"

[lib]
test = false

[dependencies]
bitflags = "1.2.1"
cc = "1.0.1"
num_cpus = "1.0"
memmap = "0.7"
tracing = "0.1"
libc = "0.2.50"
jobserver = "0.1.11"
tempfile = "3.1"
pathdiff = "0.2.0"

pan_serialize = { path = "../pan_serialize" }
pan_ast = { path = "../pan_ast" }
pan_span = { path = "../pan_span" }
pan_middle = { path = "../pan_middle" }
pan_apfloat = { path = "../pan_apfloat" }
pan_attr = { path = "../pan_attr" }
pan_symbol_mangling = { path = "../pan_symbol_mangling" }
pan_data_structures = { path = "../pan_data_structures"}
pan_errors = { path = "../pan_errors" }
pan_fs_util = { path = "../pan_fs_util" }
pan_hir = { path = "../pan_hir" }
pan_incremental = { path = "../pan_incremental" }
pan_index = { path = "../pan_index" }
pan_macros = { path = "../pan_macros" }
pan_target = { path = "../pan_target" }
pan_session = { path = "../pan_session" }
