[package]
authors = ["The Rust Project Developers"]
name = "pan_driver"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
libc = "0.2"
tracing = { version = "0.1.18" }
tracing-subscriber = { version = "0.2.13", default-features = false, features = ["fmt", "env-filter", "smallvec", "parking_lot", "ansi"] }
tracing-tree = "0.1.6"
pan_middle = { path = "../pan_middle" }
pan_ast_pretty = { path = "../pan_ast_pretty" }
pan_target = { path = "../pan_target" }
pan_lint = { path = "../pan_lint" }
pan_data_structures = { path = "../pan_data_structures" }
pan_errors = { path = "../pan_errors" }
pan_feature = { path = "../pan_feature" }
pan_hir = { path = "../pan_hir" }
pan_hir_pretty = { path = "../pan_hir_pretty" }
pan_metadata = { path = "../pan_metadata" }
pan_mir = { path = "../pan_mir" }
pan_parse = { path = "../pan_parse" }
pan_plugin_impl = { path = "../pan_plugin_impl" }
pan_save_analysis = { path = "../pan_save_analysis" }
pan_codegen_ssa = { path = "../pan_codegen_ssa" }
pan_session = { path = "../pan_session" }
pan_error_codes = { path = "../pan_error_codes" }
pan_interface = { path = "../pan_interface" }
pan_serialize = { path = "../pan_serialize" }
pan_ast = { path = "../pan_ast" }
pan_span = { path = "../pan_span" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "debugapi", "processenv"] }

[features]
llvm = ['pan_interface/llvm']
max_level_info = ['tracing/max_level_info']
