[package]
authors = ["The Rust Project Developers"]
name = "pan_errors"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
tracing = "0.1"
pan_serialize = { path = "../pan_serialize" }
pan_span = { path = "../pan_span" }
pan_macros = { path = "../pan_macros" }
pan_data_structures = { path = "../pan_data_structures" }
pan_lint_defs = { path = "../pan_lint_defs" }
unicode-width = "0.1.4"
atty = "0.2"
termcolor = "1.0"
annotate-snippets = "0.8.0"
termize = "0.1.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "synchapi", "winbase"] }
