[package]
authors = ["The Rust Project Developers"]
name = "pan_expand"
version = "0.0.0"
edition = "2018"
build = false

[lib]
doctest = false

[dependencies]
pan_serialize = { path = "../pan_serialize" }
tracing = "0.1"
pan_span = { path = "../pan_span" }
pan_ast_pretty = { path = "../pan_ast_pretty" }
pan_ast_passes = { path = "../pan_ast_passes" }
pan_attr = { path = "../pan_attr" }
pan_data_structures = { path = "../pan_data_structures" }
pan_errors = { path = "../pan_errors" }
pan_feature = { path = "../pan_feature" }
pan_macros = { path = "../pan_macros" }
pan_lexer = { path = "../pan_lexer" }
pan_parse = { path = "../pan_parse" }
pan_session = { path = "../pan_session" }
smallvec = { version = "1.0", features = ["union", "may_dangle"] }
pan_ast = { path = "../pan_ast" }
