[package]
authors = ["The Rust Project Developers"]
name = "pan_hir"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
pan_target = { path = "../pan_target" }
pan_macros = { path = "../pan_macros" }
pan_data_structures = { path = "../pan_data_structures" }
pan_index = { path = "../pan_index" }
pan_span = { path = "../pan_span" }
pan_serialize = { path = "../pan_serialize" }
pan_ast = { path = "../pan_ast" }
tracing = "0.1"
smallvec = { version = "1.0", features = ["union", "may_dangle"] }
