[package]
authors = ["The Rust Project Developers"]
name = "pan_hir_pretty"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
pan_ast_pretty = { path = "../pan_ast_pretty" }
pan_hir = { path = "../pan_hir" }
pan_target = { path = "../pan_target" }
pan_span = { path = "../pan_span" }
pan_ast = { path = "../pan_ast" }
