[package]
authors = ["The Rust Project Developers"]
name = "pan_infer"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
pan_graphviz = { path = "../pan_graphviz" }
tracing = "0.1"
pan_middle = { path = "../pan_middle" }
pan_data_structures = { path = "../pan_data_structures" }
pan_errors = { path = "../pan_errors" }
pan_hir = { path = "../pan_hir" }
pan_index = { path = "../pan_index" }
pan_macros = { path = "../pan_macros" }
pan_session = { path = "../pan_session" }
pan_serialize = { path = "../pan_serialize" }
pan_span = { path = "../pan_span" }
pan_target = { path = "../pan_target" }
smallvec = { version = "1.0", features = ["union", "may_dangle"] }
pan_ast = { path = "../pan_ast" }
