[package]
authors = ["The Rust Project Developers"]
name = "pan_lint_defs"
version = "0.0.0"
edition = "2018"

[dependencies]
log = { package = "tracing", version = "0.1" }
pan_ast = { path = "../pan_ast" }
pan_data_structures = { path = "../pan_data_structures" }
pan_span = { path = "../pan_span" }
pan_serialize = { path = "../pan_serialize" }
pan_macros = { path = "../pan_macros" }
