[package]
authors = ["The Rust Project Developers"]
name = "pan_metadata"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
libc = "0.2"
snap = "1"
tracing = "0.1"
memmap = "0.7"
smallvec = { version = "1.0", features = ["union", "may_dangle"] }
pan_middle = { path = "../pan_middle" }
pan_attr = { path = "../pan_attr" }
pan_data_structures = { path = "../pan_data_structures" }
pan_errors = { path = "../pan_errors" }
pan_feature = { path = "../pan_feature" }
pan_hir = { path = "../pan_hir" }
pan_hir_pretty = { path = "../pan_hir_pretty" }
pan_target = { path = "../pan_target" }
pan_index = { path = "../pan_index" }
pan_macros = { path = "../pan_macros" }
pan_serialize = { path = "../pan_serialize" }
stable_deref_trait = "1.0.0"
pan_ast = { path = "../pan_ast" }
pan_expand = { path = "../pan_expand" }
pan_span = { path = "../pan_span" }
pan_session = { path = "../pan_session" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "libloaderapi"] }
