[package]
authors = ["The Rust Project Developers"]
name = "pan_mir"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
either = "1.5.0"
pan_graphviz = { path = "../pan_graphviz" }
gsgdt = "0.1.2"
itertools = "0.9"
tracing = "0.1"
polonius-engine = "0.12.0"
regex = "1"
pan_middle = { path = "../pan_middle" }
pan_attr = { path = "../pan_attr" }
pan_data_structures = { path = "../pan_data_structures" }
pan_errors = { path = "../pan_errors" }
pan_hir = { path = "../pan_hir" }
pan_index = { path = "../pan_index" }
pan_infer = { path = "../pan_infer" }
pan_lexer = { path = "../pan_lexer" }
pan_macros = { path = "../pan_macros" }
pan_serialize = { path = "../pan_serialize" }
pan_session = { path = "../pan_session" }
pan_target = { path = "../pan_target" }
pan_trait_selection = { path = "../pan_trait_selection" }
pan_ast = { path = "../pan_ast" }
pan_span = { path = "../pan_span" }
pan_apfloat = { path = "../pan_apfloat" }
smallvec = { version = "1.0", features = ["union", "may_dangle"] }

[dev-dependencies]
coverage_test_macros = { path = "src/transform/coverage/test_macros" }
