[package]
authors = ["The Rust Project Developers"]
name = "pan_mir_build"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
pan_arena = { path = "../pan_arena" }
tracing = "0.1"
pan_middle = { path = "../pan_middle" }
pan_apfloat = { path = "../pan_apfloat" }
pan_attr = { path = "../pan_attr" }
pan_data_structures = { path = "../pan_data_structures" }
pan_index = { path = "../pan_index" }
pan_errors = { path = "../pan_errors" }
pan_hir = { path = "../pan_hir" }
pan_infer = { path = "../pan_infer" }
pan_serialize = { path = "../pan_serialize" }
pan_session = { path = "../pan_session" }
pan_span = { path = "../pan_span" }
pan_target = { path = "../pan_target" }
pan_trait_selection = { path = "../pan_trait_selection" }
pan_ast = { path = "../pan_ast" }
smallvec = { version = "1.0", features = ["union", "may_dangle"] }
