[package]
authors = ["The Rust Project Developers"]
name = "pan_parse"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
bitflags = "1.0"
tracing = "0.1"
pan_ast_pretty = { path = "../pan_ast_pretty" }
pan_data_structures = { path = "../pan_data_structures" }
pan_feature = { path = "../pan_feature" }
pan_lexer = { path = "../pan_lexer" }
pan_errors = { path = "../pan_errors" }
pan_session = { path = "../pan_session" }
pan_span = { path = "../pan_span" }
pan_ast = { path = "../pan_ast" }
unicode-normalization = "0.1.11"
smallvec = { version = "1.0", features = ["union", "may_dangle"] }
