[package]
authors = ["The Rust Project Developers"]
name = "pan_privacy"
version = "0.0.0"
edition = "2018"

[dependencies]
pan_middle = { path = "../pan_middle" }
pan_attr = { path = "../pan_attr" }
pan_errors = { path = "../pan_errors" }
pan_hir = { path = "../pan_hir" }
pan_typeck = { path = "../pan_typeck" }
pan_session = { path = "../pan_session" }
pan_span = { path = "../pan_span" }
pan_data_structures = { path = "../pan_data_structures" }
tracing = "0.1"
