[package]
authors = ["The Rust Project Developers"]
name = "pan_query_system"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
pan_arena = { path = "../pan_arena" }
tracing = "0.1"
rustc-rayon-core = "0.3.0"
pan_data_structures = { path = "../pan_data_structures" }
pan_errors = { path = "../pan_errors" }
pan_macros = { path = "../pan_macros" }
pan_index = { path = "../pan_index" }
pan_serialize = { path = "../pan_serialize" }
pan_span = { path = "../pan_span" }
parking_lot = "0.11"
smallvec = { version = "1.0", features = ["union", "may_dangle"] }
